[package]
name = "context-rs"
version = "0.2.0"
edition = "2021"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
description = "Pass values down the async call stack, with no_std and no_alloc support"
license = "MIT"
repository = "https://github.com/conradludgate/context-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"

[dev-dependencies]
futures-util = "0.3.25"
tokio = { version = "1", features = ["full"] }
